Fix accessibility wia + contrast

--- a/design-integration/app/styles/base/_generic.scss
+++ b/design-integration/app/styles/base/_generic.scss
@@ -35,3 +35,7 @@ main {
     padding: 15px 0;
   }
 }
+
+.hidden {
+  display: none;
+}
