--- a/design-integration/app/styles/components/_result.scss
+++ b/design-integration/app/styles/components/_result.scss
@@ -46,11 +46,6 @@
     }
   }
 
-  p {
-    color: $color-primary;
-    font-weight: 700;
-  }
-
   h3 {
     color: gray;
     font-size: 0.9em;
