--- a/design-integration/app/styles/components/_survey-item.scss
+++ b/design-integration/app/styles/components/_survey-item.scss
@@ -2,7 +2,7 @@
   &__wrapper {
     align-items: center;
     background: $color-primary;
-    color: $color-secondary;
+    color: $color-white;
     cursor: pointer;
     text-decoration: none;
     display: flex;
