--- a/design-integration/app/styles/settings/_settings.colors.scss
+++ b/design-integration/app/styles/settings/_settings.colors.scss
@@ -2,7 +2,7 @@ $color-black: #0f0f0f !default;
 $color-white: #fff !default;
 
 $color-primary: #262524;
-$color-secondary: #2980b9;
+$color-secondary: #0068ad;
 
 $color-shadow: #868686;
 
